--- a/Dockerfile_AWS
+++ b/Dockerfile_AWS
@@ -21,12 +21,12 @@ RUN mix compile
 # COPY rel rel
 RUN mix release
 
-FROM alpine:3.17
+FROM alpine:3.16
 
 # install runtime dependencies
 RUN apk upgrade --no-cache && apk add --no-cache postgresql-client bash openssl libgcc libstdc++ ncurses-libs file
 
-EXPOSE 80
+EXPOSE 443 80 4001
 ENV MIX_ENV=prod
 
 # prepare app directory
